--- a/projects/base/genesyszu/base/notebooks/common/overlay_download.ipynb
+++ b/projects/base/genesyszu/base/notebooks/common/overlay_download.ipynb
@@ -15,7 +15,7 @@
     "*  An hwh file (\\*.hwh).\n",
     "*  A python class (\\*.py).\n",
     "\n",
-    "For example, an overlay called `ZUBoard_1CGOverlay` can be loaded and downloaded by:"
+    "For example, an overlay called `base` can be loaded and downloaded by:"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "source": [
     "from pynq import Overlay\n",
     "\n",
-    "ol = Overlay(\"ZUBoard_1CGOverlay.bit\")"
+    "ol = Overlay(\"base.bit\")"
    ]
   },
   {
